[package]
name = "p2swap-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.6", features = [ "derive" ] }
p2swap = { path = "../program", features = [ "no-entrypoint" ] }
solana-client = "1.10.2"
anchor-client = "0.22.1"
solana-sdk = "1.10.2"
solana-clap-utils = "1.10.2"
spl-token = "3.2.0"
chrono = "0.4.19"
thiserror = "1.0.30"
indicatif = "0.16.2"
solana-account-decoder = "1.10.2"
bs58 = "0.4.0"